// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux Layers Module Initial reducer state 1`] = `
Object {
  "activeLayer": null,
  "cache": Object {},
  "cacheStatus": Object {},
  "data": Array [],
  "importError": null,
  "imported": Array [],
  "importingLayer": false,
  "layersProgress": Object {},
  "pendingCache": Object {},
  "syncDate": Any<Number>,
  "synced": false,
  "syncing": false,
}
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions cacheAreaBasemap 1`] = `Array []`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions cacheAreaBasemap 2`] = `Array []`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions cacheAreaLayer 1`] = `Array []`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions cacheAreaLayer 2`] = `
Array [
  Object {
    "payload": Object {
      "areaId": "areaIDMock",
      "layerId": "layerIDMock",
    },
    "type": "layers/CACHE_LAYER_REQUEST",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions cacheLayers 1`] = `Array []`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions cacheLayers 2`] = `
Array [
  Object {
    "payload": Object {
      "areaId": "areaIDMock",
      "layerId": "layerIDMock",
    },
    "type": "layers/CACHE_LAYER_REQUEST",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions downloadAreaById 1`] = `Array []`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions downloadAreaById 2`] = `
Array [
  Object {
    "payload": Object {
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "basemaps": Array [
        Object {
          "id": "mapbox://styles/mapbox/satellite-v9",
          "image": Object {
            "testUri": "../../../app/assets/basemap_mapbox_satellite.png",
          },
          "isImported": false,
          "name": "mapboxSatellite",
          "styleURL": "mapbox://styles/mapbox/satellite-v9",
          "tileUrl": null,
        },
        Object {
          "id": "mapbox://styles/resourcewatch/cjww7iv8i07yx1cmjtgazn3r0?fresh=true",
          "image": Object {
            "testUri": "../../../app/assets/basemap_default.png",
          },
          "isImported": false,
          "name": "default",
          "styleURL": "mapbox://styles/resourcewatch/cjww7iv8i07yx1cmjtgazn3r0?fresh=true",
          "tileUrl": null,
        },
        Object {
          "id": "mapbox://styles/resourcewatch/cjww836hy1kep1co5xp717jek?fresh=true",
          "image": Object {
            "testUri": "../../../app/assets/basemap_dark.png",
          },
          "isImported": false,
          "name": "dark",
          "styleURL": "mapbox://styles/resourcewatch/cjww836hy1kep1co5xp717jek?fresh=true",
          "tileUrl": null,
        },
      ],
    },
    "type": "layers/DOWNLOAD_AREA",
  },
  Object {
    "payload": Object {
      "areaId": "areaIDMock",
      "layerId": "layerIDMock",
    },
    "type": "layers/CACHE_LAYER_REQUEST",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions getUserLayers 1`] = `
Array [
  Object {
    "meta": Object {
      "offline": Object {
        "commit": Object {
          "meta": Object {
            "areas": Array [],
          },
          "type": "layers/GET_LAYERS_COMMIT",
        },
        "effect": Object {
          "url": "<API_URL_MOCK>/contextual-layer/?enabled=true",
        },
        "rollback": Object {
          "type": "layers/GET_LAYERS_ROLLBACK",
        },
      },
    },
    "type": "layers/GET_LAYERS_REQUEST",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions refreshAreaCacheById 1`] = `
Array [
  Object {
    "payload": "areaIDMock",
    "type": "layers/INVALIDATE_CACHE",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions refreshAreaCacheById 2`] = `
Array [
  Object {
    "payload": "areaIDMock",
    "type": "layers/INVALIDATE_CACHE",
  },
  Object {
    "payload": Object {
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "basemaps": Array [
        Object {
          "id": "mapbox://styles/mapbox/satellite-v9",
          "image": Object {
            "testUri": "../../../app/assets/basemap_mapbox_satellite.png",
          },
          "isImported": false,
          "name": "mapboxSatellite",
          "styleURL": "mapbox://styles/mapbox/satellite-v9",
          "tileUrl": null,
        },
        Object {
          "id": "mapbox://styles/resourcewatch/cjww7iv8i07yx1cmjtgazn3r0?fresh=true",
          "image": Object {
            "testUri": "../../../app/assets/basemap_default.png",
          },
          "isImported": false,
          "name": "default",
          "styleURL": "mapbox://styles/resourcewatch/cjww7iv8i07yx1cmjtgazn3r0?fresh=true",
          "tileUrl": null,
        },
        Object {
          "id": "mapbox://styles/resourcewatch/cjww836hy1kep1co5xp717jek?fresh=true",
          "image": Object {
            "testUri": "../../../app/assets/basemap_dark.png",
          },
          "isImported": false,
          "name": "dark",
          "styleURL": "mapbox://styles/resourcewatch/cjww836hy1kep1co5xp717jek?fresh=true",
          "tileUrl": null,
        },
      ],
    },
    "type": "layers/DOWNLOAD_AREA",
  },
  Object {
    "payload": Object {
      "areaId": "areaIDMock",
      "layerId": "layerIDMock",
    },
    "type": "layers/CACHE_LAYER_REQUEST",
  },
  Object {
    "payload": "areaIDMock1",
    "type": "layers/INVALIDATE_CACHE",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions resetCacheStatus 1`] = `
Array [
  Object {
    "payload": Object {
      "areaIDMock": Object {
        "completed": false,
        "error": false,
        "progress": 0,
        "requested": false,
      },
    },
    "type": "layers/SET_CACHE_STATUS",
  },
  Object {
    "payload": Object {
      "areaIDMock1": Object {
        "completed": false,
        "error": false,
        "progress": 0,
        "requested": false,
      },
    },
    "type": "layers/SET_CACHE_STATUS",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions resetCacheStatus full test 1`] = `
Array [
  Object {
    "payload": Object {
      "areaIDMock": Object {
        "completed": false,
        "error": false,
        "progress": 0,
        "requested": false,
      },
    },
    "type": "layers/SET_CACHE_STATUS",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions resetCacheStatus full test 2`] = `
Object {
  "activeLayer": null,
  "cache": Object {},
  "cacheStatus": Object {
    "areaIDMock": Object {
      "completed": false,
      "error": false,
      "progress": 0,
      "requested": false,
    },
  },
  "data": Array [],
  "importError": null,
  "imported": Array [],
  "importingLayer": false,
  "layersProgress": Object {},
  "pendingCache": Object {},
  "syncDate": Any<Number>,
  "synced": false,
  "syncing": false,
}
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions resetCacheStatus full test 3`] = `
Array [
  Object {
    "payload": Object {
      "area": Object {
        "application": "applicationMock",
        "geostore": Object {
          "id": "geostoreIDMock",
        },
        "id": "areaIDMock",
        "name": "nameMock",
      },
      "basemaps": Array [
        Object {
          "id": "mapbox://styles/mapbox/satellite-v9",
          "image": Object {
            "testUri": "../../../app/assets/basemap_mapbox_satellite.png",
          },
          "isImported": false,
          "name": "mapboxSatellite",
          "styleURL": "mapbox://styles/mapbox/satellite-v9",
          "tileUrl": null,
        },
        Object {
          "id": "mapbox://styles/resourcewatch/cjww7iv8i07yx1cmjtgazn3r0?fresh=true",
          "image": Object {
            "testUri": "../../../app/assets/basemap_default.png",
          },
          "isImported": false,
          "name": "default",
          "styleURL": "mapbox://styles/resourcewatch/cjww7iv8i07yx1cmjtgazn3r0?fresh=true",
          "tileUrl": null,
        },
        Object {
          "id": "mapbox://styles/resourcewatch/cjww836hy1kep1co5xp717jek?fresh=true",
          "image": Object {
            "testUri": "../../../app/assets/basemap_dark.png",
          },
          "isImported": false,
          "name": "dark",
          "styleURL": "mapbox://styles/resourcewatch/cjww836hy1kep1co5xp717jek?fresh=true",
          "tileUrl": null,
        },
      ],
    },
    "type": "layers/DOWNLOAD_AREA",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions resetCacheStatus full test 4`] = `
Object {
  "activeLayer": null,
  "cache": Object {},
  "cacheStatus": Object {
    "areaIDMock": Object {
      "completed": false,
      "error": false,
      "progress": 0,
      "requested": true,
    },
  },
  "data": Array [],
  "importError": null,
  "imported": Array [],
  "importingLayer": false,
  "layersProgress": Object {},
  "pendingCache": Object {
    "mapbox://styles/mapbox/satellite-v9": Object {
      "areaIDMock": false,
    },
    "mapbox://styles/resourcewatch/cjww7iv8i07yx1cmjtgazn3r0?fresh=true": Object {
      "areaIDMock": false,
    },
    "mapbox://styles/resourcewatch/cjww836hy1kep1co5xp717jek?fresh=true": Object {
      "areaIDMock": false,
    },
  },
  "syncDate": Any<Number>,
  "synced": false,
  "syncing": false,
}
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions resetCacheStatus full test 5`] = `
Array [
  Object {
    "payload": Object {
      "areaIDMock": Object {
        "completed": false,
        "error": false,
        "progress": 0,
        "requested": true,
      },
      "areaIDMock2": Object {
        "completed": false,
        "error": false,
        "progress": 0,
        "requested": false,
      },
    },
    "type": "layers/SET_CACHE_STATUS",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions resetCacheStatus full test 6`] = `
Object {
  "activeLayer": null,
  "cache": Object {},
  "cacheStatus": Object {
    "areaIDMock": Object {
      "completed": false,
      "error": false,
      "progress": 0,
      "requested": true,
    },
    "areaIDMock2": Object {
      "completed": false,
      "error": false,
      "progress": 0,
      "requested": false,
    },
  },
  "data": Array [],
  "importError": null,
  "imported": Array [],
  "importingLayer": false,
  "layersProgress": Object {},
  "pendingCache": Object {
    "mapbox://styles/mapbox/satellite-v9": Object {
      "areaIDMock": false,
    },
    "mapbox://styles/resourcewatch/cjww7iv8i07yx1cmjtgazn3r0?fresh=true": Object {
      "areaIDMock": false,
    },
    "mapbox://styles/resourcewatch/cjww836hy1kep1co5xp717jek?fresh=true": Object {
      "areaIDMock": false,
    },
  },
  "syncDate": Any<Number>,
  "synced": false,
  "syncing": false,
}
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions setActiveContextualLayer 1`] = `
Array [
  Object {
    "payload": null,
    "type": "layers/SET_ACTIVE_LAYER",
  },
  Object {
    "payload": "layerMock",
    "type": "layers/SET_ACTIVE_LAYER",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions setActiveContextualLayer full test 1`] = `
Array [
  Object {
    "payload": null,
    "type": "layers/SET_ACTIVE_LAYER",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions setActiveContextualLayer full test 2`] = `
Object {
  "activeLayer": null,
  "cache": Object {},
  "cacheStatus": Object {},
  "data": Array [],
  "importError": null,
  "imported": Array [],
  "importingLayer": false,
  "layersProgress": Object {},
  "pendingCache": Object {},
  "syncDate": Any<Number>,
  "synced": false,
  "syncing": false,
}
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions setActiveContextualLayer full test 3`] = `
Array [
  Object {
    "payload": "layerMock",
    "type": "layers/SET_ACTIVE_LAYER",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions setActiveContextualLayer full test 4`] = `
Object {
  "activeLayer": "layerMock",
  "cache": Object {},
  "cacheStatus": Object {},
  "data": Array [],
  "importError": null,
  "imported": Array [],
  "importingLayer": false,
  "layersProgress": Object {},
  "pendingCache": Object {},
  "syncDate": Any<Number>,
  "synced": false,
  "syncing": false,
}
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions setActiveContextualLayer full test 5`] = `
Array [
  Object {
    "payload": null,
    "type": "layers/SET_ACTIVE_LAYER",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions setActiveContextualLayer full test 6`] = `
Object {
  "activeLayer": null,
  "cache": Object {},
  "cacheStatus": Object {},
  "data": Array [],
  "importError": null,
  "imported": Array [],
  "importingLayer": false,
  "layersProgress": Object {},
  "pendingCache": Object {},
  "syncDate": Any<Number>,
  "synced": false,
  "syncing": false,
}
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions syncLayers 1`] = `
Array [
  Object {
    "meta": Object {
      "offline": Object {
        "commit": Object {
          "meta": Object {
            "areas": Array [],
          },
          "type": "layers/GET_LAYERS_COMMIT",
        },
        "effect": Object {
          "url": "<API_URL_MOCK>/contextual-layer/?enabled=true",
        },
        "rollback": Object {
          "type": "layers/GET_LAYERS_ROLLBACK",
        },
      },
    },
    "type": "layers/GET_LAYERS_REQUEST",
  },
]
`;

exports[`Redux Layers Module Redux Snapshot Thunk Actions syncLayers 2`] = `Array []`;
